force-app/main/default/objects/Corporate_Calling__c/Corporate_Calling__c.object-meta.xml
<CustomObject>
    <label>Corporate Calling</label>
    <nameField>
        <displayFormat>CCN-{0000}</displayFormat>
        <label>Corporate Calling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Calling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>