force-app/main/default/objects/Corporate_Calling__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Callings</relationshipLabel>
    <relationshipName>Corporate_Callings</relationshipName>
    <type>Lookup</type>
</CustomField>