force-app/main/default/objects/Corporate_Calling__c/fields/Added_to_BR_E_mailing_list__c.field-meta.xml
<CustomField>
    <fullName>Added_to_BR_E_mailing_list__c</fullName>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added to BR&amp;E mailing list?</label>
    <type>Checkbox</type>
</CustomField>