force-app/main/default/objects/Corporate_Calling__c/fields/Anything_else_BR_E_can_help_you__c.field-meta.xml
<CustomField>
    <fullName>Anything_else_BR_E_can_help_you__c</fullName>
    <label>Anything else BR&amp;E can help you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>