force-app/main/default/objects/Corporate_Calling__c/fields/Building_Occupied_GFA_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Occupied_GFA_sq_ft__c</fullName>
    <label>Building/ Occupied GFA (sq ft.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>