force-app/main/default/objects/Corporate_Calling__c/fields/Bus_Closure_Relocat_from_Toronto_Date__c.field-meta.xml
<CustomField>
    <fullName>Bus_Closure_Relocat_from_Toronto_Date__c</fullName>
    <label>Bus. Closure/Relocat. from Toronto Date</label>
    <type>Date</type>
</CustomField>