force-app/main/default/objects/Corporate_Calling__c/fields/Bus_Rel_Outside_of_Tor_To_What_Munic__c.field-meta.xml
<CustomField>
    <fullName>Bus_Rel_Outside_of_Tor_To_What_Munic__c</fullName>
    <inlineHelpText>Business Relocated Outside of Toronto To What Municipality</inlineHelpText>
    <label>Bus. Rel. Outside of Tor. To What Munic.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>