force-app/main/default/objects/Corporate_Calling__c/fields/Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>Business_Activity__c</fullName>
    <inlineHelpText>Provide a text overview of the businesses activity.</inlineHelpText>
    <label>Business Activity</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>