force-app/main/default/objects/Corporate_Calling__c/fields/Business_Closure_Relocation_from_Toronto__c.field-meta.xml
<CustomField>
    <fullName>Business_Closure_Relocation_from_Toronto__c</fullName>
    <label>Business Closure/Relocation from Toronto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>