force-app/main/default/objects/Corporate_Calling__c/fields/Business_Dev_Program_s_Inf_Req_Bu__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Program_s_Inf_Req_Bu__c</fullName>
    <label>Dev. Program(s) Inf Req Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City of Toronto Incentive Programs</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Training, Hiring &amp; Wage Assistance</fullName>
            </value>
            <value>
                <fullName>Research Development</fullName>
            </value>
            <value>
                <fullName>Financial and Other</fullName>
            </value>
            <value>
                <fullName>Toronto Business Development Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>