force-app/main/default/objects/Corporate_Calling__c/fields/Business_Development_Program_s__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Program_s__c</fullName>
    <label>Business Development Program(s)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Development_Program_s_Currentl__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Incubation and Commercialization Program</fullName>
            </value>
            <value>
                <fullName>EDC Culture Section</fullName>
            </value>
            <value>
                <fullName>Gold Star</fullName>
            </value>
            <value>
                <fullName>Imagination, manufacturing, Innovation, Technology Grants – IMIT</fullName>
            </value>
            <value>
                <fullName>Vacant Commercial &amp; Industrial Building Tax Rebate</fullName>
            </value>
            <value>
                <fullName>Better Building Partnership – BBP</fullName>
            </value>
            <value>
                <fullName>Eco Reof Incentive</fullName>
            </value>
            <value>
                <fullName>Enbridge Commerical Energy Solutions</fullName>
            </value>
            <value>
                <fullName>NRCan- ecoEnergy Retrofit Incentive for Industry</fullName>
            </value>
            <value>
                <fullName>Ontario Power Authority Feed-in Tariff (FIT) &amp; microFIT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partners in Project Green Audit</fullName>
            </value>
            <value>
                <fullName>Toronto Hydro SaveONEnergy Program</fullName>
            </value>
            <value>
                <fullName>Toronto Water – Large Industrial Water Rate</fullName>
            </value>
            <value>
                <fullName>City of Toronto Export Assistance – Entrepreneurial Alliances</fullName>
            </value>
            <value>
                <fullName>Export Development Canada – EDC</fullName>
            </value>
            <value>
                <fullName>Export Market Access 0 DCC</fullName>
            </value>
            <value>
                <fullName>International Trace Centres – ITC</fullName>
            </value>
            <value>
                <fullName>Minister of Economic Development, Employment and Infrastructure – MEDES</fullName>
            </value>
            <value>
                <fullName>New Exporters to Border States – NEBS</fullName>
            </value>
            <value>
                <fullName>AIME Global Initiative – Yves Landry Foundation</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Training – Tax Credit</fullName>
            </value>
            <value>
                <fullName>Canada Ontario Job Grant</fullName>
            </value>
            <value>
                <fullName>Canada Summer Jobs – Service Canada</fullName>
            </value>
            <value>
                <fullName>Federal Work Sharing</fullName>
            </value>
            <value>
                <fullName>Opportunities Ontario Provincial Nominee Program</fullName>
            </value>
            <value>
                <fullName>Partnership to Advance Youth Employment – PAYE</fullName>
            </value>
            <value>
                <fullName>Private Services – Le Manpower, ADECCO etc</fullName>
            </value>
            <value>
                <fullName>Second Career – Employment Ontario</fullName>
            </value>
            <value>
                <fullName>Summer Jobs Service – Employment Ontario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>