force-app/main/default/objects/Corporate_Calling__c/fields/Business_Development_Program_s_Currentl__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Program_s_Currentl__c</fullName>
    <label>Business Dev. Prog. Used by Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City of Toronto Incentive Programs</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Training, Hiring &amp; Wage Assistance</fullName>
            </value>
            <value>
                <fullName>Research Development</fullName>
            </value>
            <value>
                <fullName>Financial and Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>