force-app/main/default/objects/Corporate_Calling__c/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <label>Business Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Smart Cities</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
                <isActive>false</isActive>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
                <isActive>false</isActive>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>ICT</fullName>
                <isActive>false</isActive>
                <label>ICT</label>
            </value>
            <value>
                <fullName>Professional and Business Services</fullName>
                <isActive>false</isActive>
                <label>Professional and Business Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>