force-app/main/default/objects/Corporate_Calling__c/fields/Business_Subsector__c.field-meta.xml
<CustomField>
    <fullName>Business_Subsector__c</fullName>
    <label>Business Subsector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product and parts manufacturing</fullName>
            </value>
            <value>
                <fullName>Navigation and control instruments</fullName>
            </value>
            <value>
                <fullName>Other Aerospace Professional Services</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Landscape Architecture</fullName>
            </value>
            <value>
                <fullName>Industrial Design</fullName>
            </value>
            <value>
                <fullName>Interior Design</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
            <value>
                <fullName>Other Design Professional Services</fullName>
            </value>
            <value>
                <fullName>Elementary and secondary schools</fullName>
            </value>
            <value>
                <fullName>Community colleges and CEGEP</fullName>
            </value>
            <value>
                <fullName>Universities</fullName>
            </value>
            <value>
                <fullName>Business schools and computer management training</fullName>
            </value>
            <value>
                <fullName>Technical and trade schools</fullName>
            </value>
            <value>
                <fullName>Other schools and instruction</fullName>
            </value>
            <value>
                <fullName>Educational support services</fullName>
            </value>
            <value>
                <fullName>Clothing manufacturing</fullName>
            </value>
            <value>
                <fullName>Wholesalers</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Textile products</fullName>
            </value>
            <value>
                <fullName>Other fashion professional services</fullName>
            </value>
            <value>
                <fullName>Animal food</fullName>
            </value>
            <value>
                <fullName>Sugar products</fullName>
            </value>
            <value>
                <fullName>Fruit, vegetables, and specialty food</fullName>
            </value>
            <value>
                <fullName>Dairy products</fullName>
            </value>
            <value>
                <fullName>Meat products</fullName>
            </value>
            <value>
                <fullName>Seafood products</fullName>
            </value>
            <value>
                <fullName>Bakeries</fullName>
            </value>
            <value>
                <fullName>Beverage manufacturing</fullName>
            </value>
            <value>
                <fullName>Other food &amp; beverage professional services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>