force-app/main/default/objects/Corporate_Calling__c/fields/Challenge_s_Faced_by_Business__c.field-meta.xml
<CustomField>
    <fullName>Challenge_s_Faced_by_Business__c</fullName>
    <label>Challenge(s) Faced by Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Border Crossing</fullName>
            </value>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>Declining Market</fullName>
            </value>
            <value>
                <fullName>Delays</fullName>
            </value>
            <value>
                <fullName>Federal Regulations</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Foreign Competition</fullName>
            </value>
            <value>
                <fullName>Foreign Regulations</fullName>
            </value>
            <value>
                <fullName>Hydro Reliability</fullName>
            </value>
            <value>
                <fullName>Increasing Input Costs</fullName>
            </value>
            <value>
                <fullName>Lack of Government Assistance Programs</fullName>
            </value>
            <value>
                <fullName>Municipal Regulations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Provincial Regulations</fullName>
            </value>
            <value>
                <fullName>Skilled Labour Regulations</fullName>
            </value>
            <value>
                <fullName>Skilled Labour Supply</fullName>
            </value>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Taxation Problems</fullName>
            </value>
            <value>
                <fullName>Technology Changes</fullName>
            </value>
            <value>
                <fullName>Transportation Delays</fullName>
            </value>
            <value>
                <fullName>Values of Canadian Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>