force-app/main/default/objects/Corporate_Calling__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <defaultValue>&#39;Toronto&#39;</defaultValue>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>