force-app/main/default/objects/Corporate_Calling__c/fields/City_f__c.field-meta.xml
<CustomField>
    <fullName>City_f__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>