force-app/main/default/objects/Corporate_Calling__c/fields/City_of_Toronto_Ward__c.field-meta.xml
<CustomField>
    <fullName>City_of_Toronto_Ward__c</fullName>
    <formula>TEXT(Account__r.City_of_Toronto_Ward__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City of Toronto Ward</label>
    <type>Text</type>
</CustomField>