force-app/main/default/objects/Corporate_Calling__c/fields/City_Toronto_of_Ward_f__c.field-meta.xml
<CustomField>
    <fullName>City_Toronto_of_Ward_f__c</fullName>
    <formula>HYPERLINK(&#39;http://www1.toronto.ca/wps/portal/contentonly?vgnextoid=2394fe17e5648410VgnVCM10000071d60f89RCRD&#39;, &#39;Ward Address&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Toronto of Ward</label>
    <type>Text</type>
</CustomField>