force-app/main/default/objects/Corporate_Calling__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Text field 50 characters to describe the cluster activity</description>
    <label>Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>