force-app/main/default/objects/Corporate_Calling__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Corporate Callings</relationshipLabel>
    <relationshipName>Corporate_Callings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>