force-app/main/default/objects/Corporate_Calling__c/fields/Corporate_Calling_ID__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Calling_ID__c</fullName>
    <externalId>true</externalId>
    <label>Corporate Calling ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>