force-app/main/default/objects/Corporate_Calling__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&#39;Canada&#39;</defaultValue>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>