force-app/main/default/objects/Corporate_Calling__c/fields/Country_f__c.field-meta.xml
<CustomField>
    <fullName>Country_f__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>