force-app/main/default/objects/Corporate_Calling__c/fields/Date_Time_of_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Client_Contact__c</fullName>
    <label>Date &amp; Time of Visit</label>
    <type>DateTime</type>
</CustomField>