force-app/main/default/objects/Corporate_Calling__c/fields/Describe_your_challenge__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_challenge__c</fullName>
    <inlineHelpText>If Yes, please describe your challenge and we will contact you</inlineHelpText>
    <label>Describe your challenge</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>