force-app/main/default/objects/Corporate_Calling__c/fields/Do_you_plan_to_hire_staff_within__c.field-meta.xml
<CustomField>
    <fullName>Do_you_plan_to_hire_staff_within__c</fullName>
    <label>Do you plan to hire st. within next 6 m?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>