force-app/main/default/objects/Corporate_Calling__c/fields/Empl_Incr_or_Decr_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Empl_Incr_or_Decr_Next_12_Months__c</fullName>
    <label>Empl. Incr. or Decr. Next 12 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>