force-app/main/default/objects/Corporate_Calling__c/fields/Employment_Change_In_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Employment_Change_In_Next_12_Months__c</fullName>
    <label>Employment Change In Next 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>