force-app/main/default/objects/Corporate_Calling__c/fields/Employment_Information_Source__c.field-meta.xml
<CustomField>
    <fullName>Employment_Information_Source__c</fullName>
    <label>Employment Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct from Client</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Toronto Board of Trade</fullName>
            </value>
            <value>
                <fullName>Toronto Employment Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>