force-app/main/default/objects/Corporate_Calling__c/fields/Employment_Prev_Years_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Employment_Prev_Years_of_Employees__c</fullName>
    <label>Employment Prev. Years - # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>