force-app/main/default/objects/Corporate_Calling__c/fields/Employment_Previous_Years_Year__c.field-meta.xml
<CustomField>
    <fullName>Employment_Previous_Years_Year__c</fullName>
    <label>Employment Previous Years - Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>