force-app/main/default/objects/Corporate_Calling__c/fields/Export_as_a_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Export_as_a_of_Sales__c</fullName>
    <inlineHelpText>If 0% skip the next question</inlineHelpText>
    <label>Export as a % of Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0% (i.e. domestic sales only)</fullName>
            </value>
            <value>
                <fullName>1-20%</fullName>
            </value>
            <value>
                <fullName>21-40%</fullName>
            </value>
            <value>
                <fullName>41-60%</fullName>
            </value>
            <value>
                <fullName>61-80%</fullName>
            </value>
            <value>
                <fullName>81-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>