force-app/main/default/objects/Corporate_Calling__c/fields/Follow_Up_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Assistance__c</fullName>
    <label>Follow-Up Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>