force-app/main/default/objects/Corporate_Calling__c/fields/Follow_Up_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Challenge__c</fullName>
    <label>Follow-Up Challenge</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>